--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -34,14 +35,14 @@
 
         <li class="cart">
           <a href="cart.html">
-            <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              Cart <span>0</span>
+            <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
+              <span>0</span>
             </button>
           </a>
       </li>
 
         <li class="nav-item accountuser">
-          <a class="nav-link" href="#"><img src="images/user.png" alt="user">SignIn<br>Create Account</a>
+          <a class="nav-link" href="#" title="user account"><img src="images/user.png" alt="user">SignIn<br>Create Account</a>
         </li>
       </ul>
     </div>
