--- a/veggiepizzas.html
+++ b/veggiepizzas.html
@@ -30,10 +30,10 @@
                 <li class="nav-item offer">
                     <a class="nav-link" href="#">ANDY 1/1</a>
                 </li>
-                
+
                 <li class="cart">
                     <a href="cart.html">
-                      <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                      <button type="button" title=" food cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
                         Cart <span>0</span>
                       </button>
                     </a>
