--- a/cart.html
+++ b/cart.html
@@ -9,15 +9,14 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/cart.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     <title>J-PIZZA</title>
 </head>
 
 <body class="container-fluid" style="padding: 0; margin: 0;">
-
-    <nav class="navbar sticky-top navbar-expand-lg">
-        <a class="navbar-brand logo" href="#">J-PIZZA
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand logo" href="index.html">J-PIZZA
             <p>Come Hungry Leave Happy</p>
         </a>
 
@@ -34,9 +33,9 @@
 
                 <li class="cart">
                     <a href="cart.html">
-                      <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                        Cart <span>0</span>
-                      </button>
+                        <button type="button" title=" food cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            Cart <span>0</span>
+                        </button>
                     </a>
                 </li>
 
@@ -46,6 +45,25 @@
             </ul>
         </div>
     </nav>
+
+    <div class="container">
+        <div class="product-container">
+            <h2>Cart(items)</h2>
+            <h5 scope="col-md-4" class="product">ITEMS</h5>
+            <h5 scope="col-md-2" class="quantity">QUANTITY</h5>
+            <h5 scope="col-md-3" class="price">UNIT PRICE</h5>
+            <h5 scope="col-md-3" class="total">SUBTOTAL</h5>
+
+            <div class="products">
+
+            </div>
+        </div>
+
+    </div>
+
+
+
+
 
 
     <footer class="page-footer">
