--- a/gourmetthins.html
+++ b/gourmetthins.html
@@ -33,7 +33,7 @@
 
                 <li class="cart">
                     <a href="cart.html">
-                      <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                      <button type="button" title=" food cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
                         Cart <span>0</span>
                       </button>
                     </a>
