--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="css/cart.css" rel="stylesheet" type="text/css" media="all">
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     <title>J-PIZZA</title>
 </head>
 
@@ -48,15 +47,8 @@
 
     <div class="container">
         <div class="product-container">
-            <h2>Cart(items)</h2>
-            <h5 scope="col-md-4" class="product">ITEMS</h5>
-            <h5 scope="col-md-2" class="quantity">QUANTITY</h5>
-            <h5 scope="col-md-3" class="price">UNIT PRICE</h5>
-            <h5 scope="col-md-3" class="total">SUBTOTAL</h5>
-
-            <div class="products">
-
-            </div>
+          <h5>Cart</h5>
+           <table></table>
         </div>
 
     </div>
