--- a/coupleup.html
+++ b/coupleup.html
@@ -84,7 +84,7 @@
                                         Perfection!
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 850/=</span></p>
-                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                    <button type="submit" class="remove">REMOVE</button>
                                 </div>
                             </div>
 
@@ -101,7 +101,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">DRINK</h5>
                                     <p class="card-text"><span>Starting from ksh. 160/=</span></p>
-                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                    <button type="submit" class="remove">REMOVE</button>
                                 </div>
                             </div>
 
@@ -118,7 +118,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">MARINARA DIPPING SAUCE</h5>
                                     <p class="card-text"><span>Starting from ksh. 200/=</span></p>
-                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                    <button type="submit" class="remove">REMOVE</button>
                                 </div>
                             </div>
 
@@ -137,7 +137,7 @@
                                     <p class="card-text">Classic or crispy breaded? Mild or Hot? It's a wing-wing
                                         situation!</p>
                                     <p class="card-text"><span>Starting from ksh. 1100/=</span></p>
-                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                    <button type="submit" class="remove">REMOVE</button>
                                 </div>
                             </div>
 
