--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link href="css/index.css" rel="stylesheet" type="text/css" media="all">
-  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <title>J-PIZZA</title>
 </head>
 
 <body class="container-fluid" style="padding: 0; margin: 0;">
 
   <nav class="navbar sticky-top navbar-expand-lg">
-    <a class="navbar-brand logo" href="#">J-PIZZA
+    <a class="navbar-brand logo" href="index.html">J-PIZZA
       <p>Come Hungry Leave Happy</p>
     </a>
 
