--- a/meatpizzas.html
+++ b/meatpizzas.html
@@ -33,8 +33,8 @@
 
                 <li class="cart">
                     <a href="cart.html">
-                      <button type="button" title=" food cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                        Cart <span>0</span>
+                      <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
+                        <span>0</span>
                       </button>
                     </a>
                 </li>
@@ -69,8 +69,8 @@
                                         this. Savoury pepperoni, homestyle sauce, and ooey-gooey, stretchy mozzarella.
                                         Perfection!
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
