--- a/veggiedine.html
+++ b/veggiedine.html
@@ -83,7 +83,7 @@
                                         alternative.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1200/=</span></p>
-                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                    <button type="submit" class="remove">REMOVE</button>
                                 </div>
                             </div>
 
@@ -101,7 +101,7 @@
                                     <h5 class="card-title">DRINK</h5>
                                     <p class="card-text"><span>Starting from ksh. 160/=</span></p>
                                     <br><br><br>
-                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                    <button type="submit" class="remove">REMOVE</button>
                                 </div>
                             </div>
 
@@ -119,7 +119,7 @@
                                     <h5 class="card-title">BBQ DIPPING SAUCE</h5>
                                     <p class="card-text"><span>Starting from ksh. 200/=</span></p>
                                     <br><br><br>
-                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                    <button type="submit" class="remove">REMOVE</button>
                                 </div>
                             </div>
 
@@ -140,7 +140,7 @@
                                         10 or 20.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1200/=</span></p>
-                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                    <button type="submit" class="remove">REMOVE</button>
                                 </div>
                             </div>
 
