--- a/meatpizzas.html
+++ b/meatpizzas.html
@@ -9,7 +9,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/meatpizzas.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/meatpizzas.css" rel="stylesheet" type="text/css" media="all">    
     <title>J-PIZZA</title>
 </head>
 
@@ -91,8 +91,8 @@
                                         Buffalo blue cheese sauce, grilled chicken, red onions, fire-roasted red peppers
                                         and mozzarella cheese.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 1000/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1000</span></p>
+                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
@@ -112,8 +112,8 @@
                                         spice-monsters. This slice of fire combines spicy Italian sausage, hot banana
                                         peppers, and mozzarella cheese.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -132,8 +132,8 @@
                                         Italian sausage, mozzarella cheese, and Italiano blend seasoning. For the
                                         meat-lover in you.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -152,8 +152,8 @@
                                         Italiano blend seasoning, and made with creamy garlic sauce and mozzarella
                                         cheese. Tip: Try customizing to a thick crust.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -171,8 +171,8 @@
                                         a whole grain crust with grilled chicken, broccoli, sun-dried tomatoes, goat
                                         cheese, mozzarella cheese and sweet chili Thai sauce.
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <button type="submit" class="add-cart">ADD TO CART</button>
+                                    <p class="card-text">Starting from ksh.<span>1050</span></p>
+                                    <button type="button" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
