--- a/cart.html
+++ b/cart.html
@@ -10,6 +10,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="css/cart.css" rel="stylesheet" type="text/css" media="all">
+    <script>
+        function Delete(event){
+         let items = [];
+         JSON.parse(localStorage.getItem("items")).map(data=>{
+             if(data.id != event.parentElement.parentElement.children[0].textContent){
+                items.push(data);
+             }
+         });
+         localStorage.setItem("items", JSON.stringify(items));
+         window.location.reload();
+        };
+    </script>
+    
     <title>J-PIZZA</title>
 </head>
 
@@ -84,7 +97,6 @@
 
         </div>
     </footer>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
