--- a/cart.html
+++ b/cart.html
@@ -45,9 +45,9 @@
 
                 <li class="cart">
                     <a href="cart.html">
-                        <button type="button" title=" food cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            Cart <span>0</span>
-                        </button>
+                      <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
+                        <span>0</span>
+                      </button>
                     </a>
                 </li>
 
@@ -61,7 +61,7 @@
     <div class="container">
         <div class="product-container">
           <h5>Cart</h5>
-           <table></table>
+           <table class="table"></table>
         </div>
 
     </div>
