--- a/coupleup.html
+++ b/coupleup.html
@@ -33,11 +33,12 @@
 
                 <li class="cart">
                     <a href="cart.html">
-                      <button type="button" title=" food cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                        Cart <span>0</span>
+                      <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
+                        <span>0</span>
                       </button>
                     </a>
                 </li>
+
 
                 <li class="nav-item accountuser">
                     <a class="nav-link" href="#"><img src="images/user.png" alt="user">SignIn<br>Create Account</a>
