--- a/movienight.html
+++ b/movienight.html
@@ -33,8 +33,8 @@
 
                 <li class="cart">
                     <a href="cart.html">
-                      <button type="button" title=" food cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                        Cart <span>0</span>
+                      <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
+                        <span>0</span>
                       </button>
                     </a>
                 </li>
