--- a/veggiepizzas.html
+++ b/veggiepizzas.html
@@ -33,12 +33,13 @@
                 </li>
 
                 <li class="cart">
-                    <a href="#">
-                        <button type="button" title=" food cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            Cart <span>0</span>
-                        </button>
+                    <a href="cart.html">
+                      <button type="button" title=" food cart"><i class="fa fa-cart-plus" aria-hidden="true"></i>
+                        <span>0</span>
+                      </button>
                     </a>
                 </li>
+
 
                 <li class="nav-item accountuser">
                     <a class="nav-link" href="#"><img src="images/user.png" alt="user">SignIn<br>Create Account</a>
