--- a/veggiepizzas.html
+++ b/veggiepizzas.html
@@ -76,7 +76,7 @@
                                 <option>X-Large 12 slices &nbsp; <strong>Ksh 1500</strong></option>
                             </select>
                         </div>
-                        <button type="submit" class="add-cart">ADD TO CART</button>
+                        <button type="button" class="add-cart">ADD TO CART</button>
                     </div>
                 </div>
             </div>
